--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -15,9 +15,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="employee" routerLinkActive="active">Employee</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
